Fix for bug 90389. ns4xPluginInstance should not check for plugin private data pointer being null. r=peterlubczynski, sr=attinasi.